src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  box-sizing: border-box;

  background-image: url("./assets/images/species.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

/* Navigation Bar */
.nav-container {
  padding: 1%;
  background-color: bisque;
  height: 10vh;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
}
.nav-text {
  margin-left: 2%;
  display: none;
}
.nav-text a {
  text-decoration: none;
}
.nav-image {
  margin-left: 2%;
  height: 100%;
  object-fit: contain;
}

/* Tablet  */
@media screen and (min-width: 500px) {
  .nav-text {
    display: block;
  }
}

/* Desktop  */
@media screen and (min-width: 1000px) {
}

/* Start Grid System */
.container {
  display: flex;
  flex-flow: row wrap;
}
.card {
  margin: 4% 0% 0% 4%;
  flex: 0 0 92%;
  text-align: center;
  border: 1px solid greenyellow;
  border-radius: 5px;
  background-color: rgba(255, 228, 196, 0.5);
  box-shadow: -2px 2px 2px #888888;
}

/* Tablet  */
@media screen and (min-width: 500px) {
  .card {
    flex: 0 0 44%;
    background-color: rgba(255, 228, 196, 0.8);
    box-shadow: -5px 5px 5px #888888;
  }
}

/* Desktop  */
@media screen and (min-width: 1000px) {
  .card {
    flex: 0 0 28%;
  }
}
/* End Grid System */

/* Individual Card  */
.card-wrapper {
  padding: 2%;
  /* a node is place between card and its content for padding */
}
.card h2 {
  margin: 0;
  font-size: 120%;
  background-image: linear-gradient(to right, lightblue, yellow);
}
.card p {
  line-height: 120%;
  text-align: justify;
}
.card strong,
.card i {
  display: block;
  margin-bottom: 0.5%;
}

/* Footer  */
footer {
  margin-top: 4%;
  padding: 1%;
  background-color: bisque;
}
footer p {
  text-align: center;
  margin: 0;
}

/* Misc */
.loading {
  margin: auto;
}

